🔧 overflow-x on the img-1 class fix the issue !
Fixes #58

--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ body {
 .img-1 {
 	background-image: url(images/background.jpg);
 	background-attachment: scroll;
+    overflow-x: hidden;
 }
 
 .box-lg {
